--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.a603ef0b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.a1c7eacc.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.a9f256d5.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.a07e23ec.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f6267e21.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.72fa5930.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_otfy5x = {
+					__sveltekit_w3jify = {
 						base: "",
 						env: {}
 					};
@@ -22,8 +22,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.a603ef0b.js"),
-						import("/_app/immutable/entry/app.a07e23ec.js")
+						import("/_app/immutable/entry/start.a1c7eacc.js"),
+						import("/_app/immutable/entry/app.72fa5930.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
