--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.a1c7eacc.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.94db183f.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.f6267e21.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.72fa5930.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.80426ac5.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.cf5f8321.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_w3jify = {
-						base: "./",
+					__sveltekit_hetrpy = {
+						base: "",
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.a1c7eacc.js"),
-						import("/_app/immutable/entry/app.72fa5930.js")
+						import("/_app/immutable/entry/start.94db183f.js"),
+						import("/_app/immutable/entry/app.cf5f8321.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
