--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<script>
 				{
 					__sveltekit_hetrpy = {
-						base: "",
+						base: "/MomentumGameStudio.github.io/",
 						env: {}
 					};
 
