--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/MomentumGameStudio.github.io/favicon.png" />
+		<link rel="icon" href="/./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/MomentumGameStudio.github.io/_app/immutable/entry/start.94bf53a0.js">
-		<link rel="modulepreload" href="/MomentumGameStudio.github.io/_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/MomentumGameStudio.github.io/_app/immutable/chunks/singletons.f700d87e.js">
-		<link rel="modulepreload" href="/MomentumGameStudio.github.io/_app/immutable/entry/app.b7efd785.js">
+		<link rel="modulepreload" href="/./_app/immutable/entry/start.03e31d01.js">
+		<link rel="modulepreload" href="/./_app/immutable/chunks/index.97a4c4bf.js">
+		<link rel="modulepreload" href="/./_app/immutable/chunks/singletons.a17e5640.js">
+		<link rel="modulepreload" href="/./_app/immutable/entry/app.34775be2.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_ndtka9 = {
-						assets: "/MomentumGameStudio.github.io",
-						base: "/MomentumGameStudio.github.io",
+					__sveltekit_b3c76f = {
+						assets: "/.",
+						base: "/.",
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/MomentumGameStudio.github.io/_app/immutable/entry/start.94bf53a0.js"),
-						import("/MomentumGameStudio.github.io/_app/immutable/entry/app.b7efd785.js")
+						import("/./_app/immutable/entry/start.03e31d01.js"),
+						import("/./_app/immutable/entry/app.34775be2.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
