--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="/./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/./_app/immutable/entry/start.03e31d01.js">
+		<link rel="modulepreload" href="/./_app/immutable/entry/start.f4ff283b.js">
 		<link rel="modulepreload" href="/./_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/./_app/immutable/chunks/singletons.a17e5640.js">
-		<link rel="modulepreload" href="/./_app/immutable/entry/app.34775be2.js">
+		<link rel="modulepreload" href="/./_app/immutable/chunks/singletons.26b1a97c.js">
+		<link rel="modulepreload" href="/./_app/immutable/entry/app.b4273aba.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_b3c76f = {
+					__sveltekit_1ud2fed = {
 						assets: "/.",
 						base: "/.",
 						env: {}
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/./_app/immutable/entry/start.03e31d01.js"),
-						import("/./_app/immutable/entry/app.34775be2.js")
+						import("/./_app/immutable/entry/start.f4ff283b.js"),
+						import("/./_app/immutable/entry/app.b4273aba.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
