--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/./favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/./_app/immutable/entry/start.f4ff283b.js">
-		<link rel="modulepreload" href="/./_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/./_app/immutable/chunks/singletons.26b1a97c.js">
-		<link rel="modulepreload" href="/./_app/immutable/entry/app.b4273aba.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.f4ff283b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.97a4c4bf.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.26b1a97c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b4273aba.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
 					__sveltekit_1ud2fed = {
-						assets: "/.",
-						base: "/.",
+						assets: ".",
+						base: ".",
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/./_app/immutable/entry/start.f4ff283b.js"),
-						import("/./_app/immutable/entry/app.b4273aba.js")
+						import("./_app/immutable/entry/start.f4ff283b.js"),
+						import("./_app/immutable/entry/app.b4273aba.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
