--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.7b28c9d3.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.aa88744e.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.df1bd918.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.03e01902.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.a67d9853.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.166bf1fc.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_134ip68 = {
+					__sveltekit_1yafpjv = {
 						base: "",
 						env: {}
 					};
@@ -22,8 +22,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.7b28c9d3.js"),
-						import("/_app/immutable/entry/app.03e01902.js")
+						import("/_app/immutable/entry/start.aa88744e.js"),
+						import("/_app/immutable/entry/app.166bf1fc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
