--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Momentum Game Studio</title>
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.7a87457b.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.a75bccab.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.97a4c4bf.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.d3ff46d4.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.ab7faed6.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/singletons.0d9ada92.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.90dd7f53.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1dmxpp8 = {
+					__sveltekit_ayw9io = {
 						base: "",
 						env: {}
 					};
@@ -22,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.7a87457b.js"),
-						import("/_app/immutable/entry/app.ab7faed6.js")
+						import("/_app/immutable/entry/start.a75bccab.js"),
+						import("/_app/immutable/entry/app.90dd7f53.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
